--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -6,9 +6,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:prettier/recommended",
-    "@babel/plugin-transform-private-property-in-object",
-    "next/core-web-vitals"
+    "plugin:prettier/recommended"
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
