--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
         "username": "root",
-        "password": "hiMR9u+6c",
+        "password": "bwJ%>1!0:8QS",
         "database": "mydaily",
         "host": "localhost",
         "dialect": "mysql"
