--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -3,5 +3,6 @@
   "trailingComma": "all",
   "singleQuote": false,
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "endOfLine": "auto"
 }
