--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
         "lint:fix": "eslint --fix ."
     },
     "dependencies": {
+        "@slack/bolt": "^3.17.1",
         "bcryptjs": "^2.4.3",
         "concurrently": "^8.2.2",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
         "express": "^4.19.1",
+        "googleapis": "^140.0.0",
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.9.2",
+        "node-cron": "^3.0.3",
         "nodemon": "^3.1.0",
         "sequelize": "^6.37.1",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "ws": "^8.17.1"
     },
     "devDependencies": {
         "eslint": "^8.57.0",
