--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^11.0.22",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-calendar": "^4.8.0",
