--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,20 +15,22 @@ jobs:
       run: npm install
 
     - name: Deploy to AWS EC2
-      uses: appleboy/ssh-action@0.1.4
+      uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: ${{ secrets.SSH_PORT}}
         source: "./"  # This now correctly points to the current directory
         target: "/home/ubuntu/mydaily-app"
 
     - name: Restart PM2 application
-      uses: appleboy/ssh-action@0.1.4
+      uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: ${{ secrets.SSH_PORT}}
         script: |
           cd /home/ubuntu/mydaily-app
           pm2 reload all  # This command restarts your application
