--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
         port: ${{ secrets.SSH_PORT}}
         source: "./"  # This now correctly points to the current directory
         target: "/home/ubuntu/mydaily-app"
+        debug: true
 
     - name: Restart PM2 application
       uses: appleboy/scp-action@master
@@ -34,3 +35,8 @@ jobs:
         script: |
           cd /home/ubuntu/mydaily-app
           pm2 reload all  # This command restarts your application
+
+    - name: Write SSH private key to file
+      run: |
+         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+         chmod 600 ~/.ssh/id_rsa
