--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,9 @@ jobs:
           npm install
 
           # Restart the application using PM2
-          pm2 reload ecosystem.config.js || pm2 start ecosystem.config.js
+          # pm2 reload ecosystem.config.js || pm2 start ecosystem.config.js
 
           # Optionally check PM2 logs for errors
-          pm2 logs
+          # pm2 logs
         EOF
 
