--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           git pull origin main
 
           # Install/update dependencies
-          npm install
+          sudo npm install
 
           # Restart the application using PM2
           # pm2 reload ecosystem.config.js || pm2 start ecosystem.config.js
