--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,44 @@
 name: Node.js CI/CD on Amazon Linux
 
 on:
-  push:
-    branches: [ main ]
+    push:
+        branches: [main]
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+    deploy:
+        runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
+        steps:
+            - uses: actions/checkout@v2
 
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.5.4
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+            - name: Set up SSH
+              uses: webfactory/ssh-agent@v0.5.4
+              with:
+                  ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-    - name: Deploy to AWS EC2
-      run: |
-        ssh -o StrictHostKeyChecking=no ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} << 'EOF'
-          # Add npm global binaries to PATH
-          export PATH=$PATH:/usr/local/bin
-          
-          # Go to the app directory on the EC2 instance
-          cd /home/ubuntu/mydaily-app  # Change this to your app's location
+            - name: Deploy to AWS EC2
+              run: |
+                  ssh -o StrictHostKeyChecking=no ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} << 'EOF'
+                    # Add npm global binaries to PATH
+                    export PATH=$PATH:/usr/local/bin
+                    
+                    # Go to the app directory on the EC2 instance
+                    cd /home/ubuntu/mydaily-app  # Change this to your app's location
 
-          # Pull the latest code from GitHub
-          git pull origin main
+                    # Pull the latest code from GitHub
+                    git pull origin main
 
-          # Install/update dependencies
-          sudo npm install
+                    # Install/update dependencies client
+                    sudo cd /client
+                    sudo npm install
+                    cd ..
 
-          # Restart the application using PM2
-          # pm2 reload ecosystem.config.js || pm2 start ecosystem.config.js
+                    # Install/update dependencies app
+                    sudo npm install
 
-          # Optionally check PM2 logs for errors
-          # pm2 logs
-        EOF
+                    # Restart the application using PM2
+                    # pm2 reload ecosystem.config.js || pm2 start ecosystem.config.js
 
+                    # Optionally check PM2 logs for errors
+                    # pm2 logs
+                  EOF
