--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
                     git pull origin main
 
                     # Install/update dependencies client
-                    sudo cd /client
+                    cd /client
                     sudo npm install
                     cd ..
 
