--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,1 @@
-APP_BROWSER_BASE_URL='http://localhost:3001'
-PUBLIC_API_BASE_URL='http://13.43.110.169:3001'
+PUBLIC_API_BASE_URL='https://dashboard.itsmydaily.com/api/'
